# context-capsules

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  SETUP.md  SKILL.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  spec_change.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  FAQ.md  RELEASING.md  TROUBLESHOOTING.md
docs/images/: MANIFEST.md
src/capsule/: __init__.py  __main__.py  exit_codes.py  redaction.py
src/capsule/cli/: __init__.py  app.py  formatting.py  summary.py
src/capsule/cli/commands/: __init__.py  apply.py  context.py  doctor.py  init.py  load.py  log.py  record.py  show.py  task.py
src/capsule/cli/edge/: __init__.py  clipboard.py  drafter.py  evidence.py  git.py  patch.py
src/capsule/engine/: __init__.py  engine.py  errors.py  events.py  fold.py  render.py  schema.py  verify.py
src/capsule/store/: __init__.py  lock.py  paths.py  store.py
tests/: conftest.py  test_agent_validation.py  test_apply.py  test_cli_core.py  test_cli_encoding.py  test_cli_errors.py  test_cli_grammar.py  test_cli_read.py  test_cli_record.py  test_cli_smoke.py  test_clipboard.py  test_conformance.py  test_dist_hygiene.py  test_doctor.py  test_drafter_byokey.py  test_engine.py  test_exit_codes.py  test_fixture_conformance.py  test_fold.py  test_formatting.py  test_forward_compat.py  test_init_coldstart.py  test_lock.py  test_no_network.py  test_packaging.py  test_phase_boundaries.py  test_render.py  test_schema.py  test_sparse_repo_security.py  test_store.py  test_summary.py  test_task_lifecycle.py  test_verify.py
tests/fixtures/: canonical.jsonl  canonical.md  demo-incidents.jsonl  demo-orders.jsonl  demo-sync.jsonl  empty.md
